2006-08-31 Dario Massarin <nekkar@libero.it>
        * Add the TransfersViewDelegate and TransferTreeSelectionModel classes.
        * The former will be used to redesign the TransfersView look & feel,
          now it is used just to catch the mouse events.
        * The latter was introduced to have more control over the
          items that can be selected by the user. In this way it was possible
          to inhibit the selection of group objects.
        * Show the KMenu when the user right clicks on a selection of transfers.

2005-11-03 Urs Wolfer <uwolfer @ fwo.ch>
        * Add option to show / hide menubar and toolbar (forwardport)

2005-10-10 Urs Wolfer <uwolfer @ fwo.ch>
        * Icon updates: Remove a lot icons. Most icons are part of
          kdelibs. cr22-{app-kget}/{mime-kget_list}.png  icons were 32x32.
          Resized to 22x22. edit_add / edit_remove icons (used in sidebar)
          aren't in kdelibs. Replaced with viewmag+/-. I know they are not
          very suitable. But we have to do a lot of work on the sidebar.
        * (Re-)implement "Copy URL to Clipboard" transfer action.

2005-10-07 Urs Wolfer <uwolfer @ fwo.ch>
        * Work on configuration dialogs
        * Make droptarget-sticky function working
        * Start implementing expert-mode
        * (Re-)implement clipboard-autopaste function

2005-10-06 Urs Wolfer <uwolfer @ fwo.ch>
        * Make commandline option --showDropTarget working

2005-09-17 Urs Wolfer <uwolfer @ fwo.ch>
        * Konqueror integration implementation.
        Note: Konqueror freezes at download start if integration is enabled.
        But I think it's more a Konqueror than a KGet problem. I hope I'll find a solution.

2005-09-10 Dario Massarin <nekkar@libero.it>
        * Now a TransferHandler object is created always bt the TransferFactory.
        This allows to easily reimplement the TransferHandler class, just by
        creating your own class and returning it when the createTransferHandler()